framework col added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Esercizio per casa</h1>
+        <section></section>
+    </main>
 </body>
 </html>
