first section complete

--- a/index.html
+++ b/index.html
@@ -12,8 +12,59 @@
 </head>
 <body>
     <main>
-        <h1>Esercizio per casa</h1>
-        <section></section>
+        <h1>Esercizio per Casa</h1>
+        <section class="margin-bottom">
+            <div class="row">
+                <div class="col-1">Col 1</div>
+                <div class="col-1">Col 1</div>
+                <div class="col-1">Col 1</div>
+                <div class="col-1">Col 1</div>
+                <div class="col-1">Col 1</div>
+                <div class="col-1">Col 1</div>
+                <div class="col-1">Col 1</div>
+                <div class="col-1">Col 1</div>
+                <div class="col-1">Col 1</div>
+                <div class="col-1">Col 1</div>
+                <div class="col-1">Col 1</div>
+                <div class="col-1">Col 1</div>
+            </div>
+            <div class="row">
+                <div class="col-2">Col</div>
+                <div class="col">Col</div>
+                <div class="col">Col</div>
+            </div>
+            <div class="row">
+                <div class="col-12">12 Col</div>
+            </div>
+            <div class="row">
+                <div class="col-8">8 Col</div>
+                <div class="col-2">2 Col</div>
+                <div class="col-2">2 Col</div>
+            </div>
+            <div class="row">
+                <div class="col-1">1 Col</div>
+                <div class="col-2">2 Col</div>
+                <div class="col-2">2 Col</div>
+                <div class="col-6">6 Col</div>
+                <div class="col-1">1 Col</div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <div class="row">
+                        <div class="col-2 green-background">Nested 2 Col</div>
+                        <div class="col-2 green-background">Nested 2 Col</div>
+                        <div class="col-8 green-background">Nested 8 Col</div>
+                        
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="row">
+                        <div class="col-6 green-background">Nested 6 Col</div>
+                        <div class="col-6 green-background">Nested 6 Col</div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
