--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <main>
         <h1>Esercizio per Casa</h1>
-        <section class="margin-bottom">
+        <section class="margin">
             <div class="row">
                 <div class="col-1">Col 1</div>
                 <div class="col-1">Col 1</div>
@@ -63,6 +63,62 @@
                         <div class="col-6 green-background">Nested 6 Col</div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <h1>Offset</h1>
+        <section class="margin">
+            <div class="row">
+                <div class="offset-11"></div>
+                <div class="col"></div>
+            </div>
+            <div class="row">
+                <div class="offset-10"></div>
+                <div class="col"></div>
+            </div>
+            
+            <div class="row">
+                <div class="offset-9"></div>
+                <div class="col"></div>
+            </div>
+
+            <div class="row">
+                <div class="offset-8"></div>
+                <div class="col"></div>
+            </div>
+
+            <div class="row">
+                <div class="offset-7"></div>
+                <div class="col"></div>
+            </div>
+
+            <div class="row">
+                <div class="offset-6"></div>
+                <div class="col"></div>
+            </div>
+
+            <div class="row">
+                <div class="offset-5"></div>
+                <div class="col"></div>
+            </div>
+
+            <div class="row">
+                <div class="offset-4"></div>
+                <div class="col"></div>
+            </div>
+
+            <div class="row">
+                <div class="offset-3"></div>
+                <div class="col"></div>
+            </div>
+
+            <div class="row">
+                <div class="offset-2"></div>
+                <div class="col"></div>
+            </div>
+
+            <div class="row">
+                <div class="offset-1"></div>
+                <div class="col"></div>
             </div>
         </section>
     </main>
