--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
+    <main class="container">
         <h1>Esercizio per Casa</h1>
         <section class="margin">
             <div class="row">
